--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Starý styl vyhledávání">
 <!ENTITY Ctr_ctroldsearchc	"Po vyhledávání vyčistit pole hledání">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu (předvolba about:config)">
 <!ENTITY Ctr_osearch_meoit	"Klik kolečkem myši: prohledávat nové panely 'na pozadí'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Odstranit barevné/zamlžené pozadí (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Barvy 'Blue Aero' pro hlavní lištu a panely">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Lišta title/menu/tabs: odstranit barvu pozadí">
 <!ENTITY Ctr_transpttbew10	"Další tweaky pro některá témata OS">
 <!ENTITY Ctr_transptcw10	"Skrýt defaultní OS tlačítka min/max/close">
