--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Search">
 <!ENTITY Ctr_ctroldsearch	"Gamle søgning">
 <!ENTITY Ctr_ctroldsearchc	"Ryd søgeboks efter søgning">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad (about:config-indstilling)">
 <!ENTITY Ctr_osearch_meoit	"Mellemklik: søg i nyt 'forgrundsfaneblad'">
 <!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Fjern baggrundsfarve/tåge (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Titel-/menu-/fanebladsværktøjslinje: fjern baggrundsfarve">
 <!ENTITY Ctr_transpttbew10	"Yderligere tweaks til nogle OS-temaer">
 <!ENTITY Ctr_transptcw10	"Skjul standard OS min/maks/luk-knapper">
