--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Suche">
 <!ENTITY Ctr_ctroldsearch	"Alte Suche">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
+<!ENTITY Ctr_ctroldsearchr	"Nach der Suche zur Standardsuchmaschine wechseln">
 <!ENTITY Ctr_search_oit		"Suche in neuem Tab öffnen (about:config-Einstellung)">
 <!ENTITY Ctr_osearch_meoit	"Mittelklick: Suche im Vordergrund-Tab öffnen">
 <!ENTITY Ctr_osearch_iwidth	"Popupbreite automatisch der Suchfeldbreite anpassen">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Hintergrundfarbe/-nebel entfernen (Windows Aero Glass / Windows 8)">
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero'-Farben für Leisten (und Tabs)">
+<!ENTITY Ctr_aerocolorsg	"Grau-blaue 'Aero'-Farben">
 <!ENTITY Ctr_transpttbw10	"Titel-/Menü-/Tableiste: Hintergrundfarbe entfernen">
 <!ENTITY Ctr_transpttbew10	"Weitere Anpassungen für einige OS-Themen">
 <!ENTITY Ctr_transptcw10	"Standardschaltflächen 'Minimieren/Maximieren/Schließen' verstecken">
