--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Pytanje w nowem rejtarku wócyniś (nastajenje about:config)">
 <!ENTITY Ctr_osearch_meoit	"Srjejźne kliknjenja: Pytanje w nowem 'prědkowem rejtarku'">
 <!ENTITY Ctr_osearch_iwidth	"Šyrokosć wuskokujucego wokna awtomatiski pśiměriś">
@@ -303,6 +304,7 @@
 <!ENTITY Ctr_menubarnofog	"Slězynowu barwu/młu wótpóraś (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barwy 'Blue Aero' za głowne rědki a rejtarki">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_transpttbew10	"Pśidatne pólěpšenja za někotare drastwy źěłowego systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłocaški Miniměrowaś/Maksiměrowaś/Zacyniś schowaś">
