--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Αναζήτηση">
 <!ENTITY Ctr_ctroldsearch	"Παλιότερη διεπαφή αναζήτησης">
 <!ENTITY Ctr_ctroldsearchc	"Κένωση πλαισίου αναζήτησης μετά την αναζήτηση">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα (προτίμηση «about:config»)">
 <!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: αναζήτηση σε νέα καρτέλα στο προσκήνιο">
 <!ENTITY Ctr_osearch_iwidth	"Αυτόματη ρύθμιση εύρους αναδυόμενου">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Απομάκρυνση χρώματος/ομίχλης φόντου (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου">
 <!ENTITY Ctr_transpttbew10	"Επιπλέον πειράγματα για θέματα ορισμένων Λ.Σ.">
 <!ENTITY Ctr_transptcw10	"Απόκρυψη προεπιλεγμένων κουμπιών ΛΣ ελαχιστοποίηση/μεγιστοποίηση/κλείσιμο">
