--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Buscar">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña (about:config >> browser.search.openintab)">
 <!ENTITY Ctr_osearch_meoit	"Clic central: Busqueda en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente anchura del menú emergente">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Eliminar color/niebla de fondo (Windows Aeroglass/8)">
 
 <!ENTITY Ctr_aerocolors		"Colores azul Aero (celeste) para las barras principales y pestañas">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo">
 <!ENTITY Ctr_transpttbew10	"Ajustes adicionales para algunos temas decorativos de SO">
 <!ENTITY Ctr_transptcw10	"Ocultar botones Min/Max/Cerrar predeterminados del SO">
