--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Otsing">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil (about:config eelistus)">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Eemalda taustavärv/-udu (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Sinised Aero värvid tööriistaribadel (ja kaartidel)">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
 <!ENTITY Ctr_transpttbew10	"Lisapisiparandused mõne OS teema jaoks">
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
