--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Pytanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić (nastajenje about:config)">
 <!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
 <!ENTITY Ctr_osearch_iwidth	"Šěrokosć wuskakowaceho wokna přiměrić">
@@ -303,6 +304,7 @@
 <!ENTITY Ctr_menubarnofog	"Pozadkowu barbu/młu wotstronić (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"Barby 'Blue Aero' za hłowne lajsty a rajtarki">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Titulna/menijowa/rajtarkowa lajsta: Pozadkowu barbu wotstronić">
 <!ENTITY Ctr_transpttbew10	"Přidatne polěpšenja za někotre drasty dźěłoweho systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłóčatka Miniměrować/Maksiměrować/Začinić schować">
