--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -9,7 +9,7 @@
 <!ENTITY Ctr_statusbar		"ステータスバー">
 <!ENTITY Ctr_flexspace		"フレキシブルスペース">
 <!ENTITY Ctr_space			"スペース">
-<!ENTITY Ctr_separator		"セパレータ">
+<!ENTITY Ctr_separator		"セパレーター">
 <!ENTITY Ctr_navthrobber	"アクティビティインジケータ">
 <!ENTITY Ctr_sidebarbutton	"サイドバー">
 <!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"タブを下にする (v2) --- [tabsontop=false] 属性">
 <!ENTITY Ctr_tabsontopW1	"v2 はいくつかのアドオンと完全なテーマ以外に互換性はありません！">
 <!ENTITY Ctr_tabsontopI1	"以下の項目に属性 [tabsontop=true/false] 属性 を加える">
-<!ENTITY Ctr_tabsintitlebar	"&brandShortName; タイトルバー (about:config設定)">
+<!ENTITY Ctr_tabsintitlebar	"&brandShortName; タイトルバー (about:config 設定)">
 <!ENTITY Ctr_tabwidthdef	"(デフォルト)">
 <!ENTITY Ctr_tabwidthcla	"(クラシック)">
 <!ENTITY Ctr_tabminheight	"高さ:">
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"48px未満の値は、ほとんどの場合、不具合の原因となります！">
 <!ENTITY Ctr_square_edges	"上部の角を四角くする">
 <!ENTITY Ctr_tttitlebar		"タブタイトルを &brandShortName; タイトルバーに表示する">
-<!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く (about:config設定)">
+<!ENTITY Ctr_tabinsertion	"現在のタブの後ろに関連するタブを開く (about:config 設定)">
 <!ENTITY Ctr_emptytfavico	"ファビコンの表示（サイトのファビコンが存在しないとき）">
 <!ENTITY Ctr_emptytfavico_n	"なし">
 <!ENTITY Ctr_emptytfavico_g	"一般">
@@ -70,7 +70,7 @@
 <!ENTITY Ctr_closei_def		"デフォルトボタン">
 <!ENTITY Ctr_closeonleft	"タブタイトルの前に表示">
 <!ENTITY Ctr_closetabbig	"大きなボタン (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"タブがひとつの時はタブと同時にウィンドウを閉じる (about:config設定)">
+<!ENTITY Ctr_close_wwltab	"タブがひとつの時はタブと同時にウィンドウを閉じる (about:config 設定)">
 
 <!ENTITY Ctr_hctpinfotab	"タブのスタイルのうちいくつかは Hide Caption Titlebar Plus とは互換性がありません。">
 <!ENTITY Ctr_hctpinfoab		"タイトルバー上のボタンは Hide Caption Titlebar Plus に対応していません。">
@@ -80,7 +80,7 @@
 <!ENTITY Ctr_appbutton1		"ツールバーに表示">
 <!ENTITY Ctr_appbutton1wt	"ツールバーに表示 (テキストのみ)">
 <!ENTITY Ctr_appbutton2		"&brandShortName; タイトルバーに表示">
-<!ENTITY Ctr_appbutton2h	"&brandShortName; タイトルバーに表示 (hidden)">
+<!ENTITY Ctr_appbutton2h	"&brandShortName; タイトルバーに表示 (隠す)">
 <!ENTITY Ctr_appbutton2io	"&brandShortName; タイトルバーに表示 (アイコンのみ)">
 <!ENTITY Ctr_paneluibtweak	"メニューボタンとして &brandShortName; ボタンを表示する…">
 <!ENTITY Ctr_paneluibtweak2	"メニューボタンとして &brandShortName; ボタン (アイコンのみ) を表示する…">
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_appbuttonc_cu	"任意の色">
 <!ENTITY Ctr_appbuttonct	"ツールバー上のボタンの任意の色">
 <!ENTITY Ctr_appbuttonI1	"再起動を推奨">
-<!ENTITY Ctr_appbuttonI1e	"WindowsのOSタイトルバーには表示されません。&brandShortName;タイトルバー上のみです。">
+<!ENTITY Ctr_appbuttonI1e	"WindowsのOSタイトルバーには表示されません。&brandShortName; タイトルバー上のみです。">
 <!ENTITY Ctr_appbuttonI2	"ボタンの色はタイトルバーとタブバーのみで表示されます。">
 <!ENTITY Ctr_appbutmhi		"高い位置に表示 (タブバーに表示した時のみ)">
 <!ENTITY Ctr_appbautocol	"自動的に色を変更する (デフォルト / Aurora / Nightly)">
@@ -122,14 +122,14 @@
 <!ENTITY Ctr_altoptionsw	"オプションページをウィンドウで表示">
 <!ENTITY Ctr_altoptionsww	"幅:">
 <!ENTITY Ctr_altoptionswh	"高さ:">
-<!ENTITY Ctr_altoptionsi	"オプションウィンドウは、すべてのツールバーが隠されたブラウザウィンドウであり、ダイアログではありません。このウィンドウを開いて「現在のページを使用」機能を使用すると、オプションウィンドウのURL(about:preferences)が追加されます。オプションツールバーボタンは、オプションウィンドウを開けるように新しいものに置き換えられます。">
+<!ENTITY Ctr_altoptionsi	"オプションウィンドウは、すべてのツールバーが隠されたブラウザウィンドウであり、ダイアログではありません。このウィンドウを開いて「現在のページを使用」機能を使用すると、オプションウィンドウの URL(about:preferences) が追加されます。オプションツールバーボタンは、オプションウィンドウを開けるように新しいものに置き換えられます。">
 <!ENTITY Ctr_options_rem	"最後に開いたカテゴリを記憶する">
 <!ENTITY Ctr_svgfilters		"デフォルトのツールバーボタンのアイコンを SVG カラーにする">
 <!ENTITY Ctr_wincontrols	"フルスクリーン用ウィンドウ制御ボタンを移動可能にする">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"メニューボタンパネルのセパレーター">
+<!ENTITY Ctr_puibut_no_sep	"隠す">
+<!ENTITY Ctr_puibut_l_sep	"左">
+<!ENTITY Ctr_puibut_r_sep	"右">
 <!ENTITY Ctr_html5warning	"HTML5 フルスクリーン警告を表示する">
 <!ENTITY Ctr_oldtoplevimg	"トップレベルドメインイメージ: 古い外観で置き換える">
 <!ENTITY Ctr_altalertbox	"ダイアログ: 替わりの外観で置き換える">
@@ -165,10 +165,11 @@
 <!ENTITY Ctr_search_ui		"検索バー">
 <!ENTITY Ctr_ctroldsearch	"古い検索スタイル">
 <!ENTITY Ctr_ctroldsearchc	"検索後に検索ボックスを消去する">
-<!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config設定)">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config 設定)">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_cwidth	"ポップアップの幅を設定する">
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
@@ -180,7 +181,7 @@
 <!ENTITY Ctr_am_buticons	"アドオンリスト: ボタンをアイコンに置き換える">
 <!ENTITY Ctr_am_hovshowb	"アドオンリスト: カーソルを乗せた時ボタンを表示する">
 <!ENTITY Ctr_addonversion	"アドオンリスト: アドオンのバージョンを表示する">
-<!ENTITY Ctr_xpinstallui	"古いアドオンインストールウィンドウ (about:config設定)">
+<!ENTITY Ctr_xpinstallui	"古いアドオンインストールウィンドウ (about:config 設定)">
 <!ENTITY Ctr_bmbutton		"ブックマークメニューボタン">
 <!ENTITY Ctr_hiderecentbm	"ブックマークポップアップ: 「最近ブックマークしたページ」を隠す">
 <!ENTITY Ctr_hideeditbm		"ブックマークスター: ポップアップを隠す (ページがブックマークされていない場合)">
@@ -259,22 +260,22 @@
 <!ENTITY Ctr_padlock_def	"デフォルト">
 <!ENTITY Ctr_padlock_cla	"クラシック">
 <!ENTITY Ctr_padlock_mod	"モダン">
-<!ENTITY Ctr_padlock_ext	"空白ページで&brandShortName;アイコンを表示する">
+<!ENTITY Ctr_padlock_ext	"空白ページで &brandShortName; アイコンを表示する">
 <!ENTITY Ctr_icopageinfo	"クリックした時ページ情報ウィンドウを開く">
 <!ENTITY Ctr_lbsbsize		"ロケーションバーと検索バーの横幅を指定する">
 <!ENTITY Ctr_searchbar		"検索バー">
 <!ENTITY Ctr_autocomplete	"自動補完候補のポップアップリスト">
 <!ENTITY Ctr_altautocompl	"替わりの自動補完候補で置き換える (実験的)">
-<!ENTITY Ctr_urlbar_uc		"自動補完機能を無効にする (about:config設定)">
+<!ENTITY Ctr_urlbar_uc		"自動補完機能を無効にする (about:config 設定)">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
-<!ENTITY Ctr_lbsugres		"候補の表示数 (about:config設定)">
+<!ENTITY Ctr_lbsugres		"候補の表示数 (about:config 設定)">
 <!ENTITY Ctr_lbsbradius		"ロケーションバーと検索バーの枠線の角の丸みを設定する">
 
 <!ENTITY Ctr_menubar_items	"メニュー項目の位置">
 <!ENTITY Ctr_extrabar		"追加のツールバー">
 <!ENTITY Ctr_extrabar0		"追加のツールバー">
 <!ENTITY Ctr_extrabar1		"追加のツールバー">
-<!ENTITY Ctr_extrabarinfo	"「タブを上にする」と「タブを下にする」では追加のツールバーの順序はランダムに切り替わります。設定の反映には&brandShortName; の再起動が必要です。">
+<!ENTITY Ctr_extrabarinfo	"「タブを上にする」と「タブを下にする」では追加のツールバーの順序はランダムに切り替わります。設定の反映には &brandShortName; の再起動が必要です。">
 
 <!ENTITY Ctr_invicons		"反転アイコン">
 <!ENTITY Ctr_menubar		"メニューバー">
@@ -300,10 +301,11 @@
 
 <!ENTITY Ctr_altmenubar		"背景色を加える (システムのタイトルバー)">
 <!ENTITY Ctr_altmenubarpos	"配置">
-<!ENTITY Ctr_altmenubarpos2	"&brandShortName;タイトルバーの下">
+<!ENTITY Ctr_altmenubarpos2	"&brandShortName; タイトルバーの下">
 <!ENTITY Ctr_menubarnofog	"背景色とぼかしを取り除く (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_aerocolors		"ツールバーとタブを Blue Aero カラーにする">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"タイトル/メニュー/タブ ツールバー: 背景色を取り除く">
 <!ENTITY Ctr_transpttbew10	"いくつかのシステムテーマのための追加の微調整">
 <!ENTITY Ctr_transptcw10	"システムデフォルトのボタンを隠す (最小化/最大化/閉じる)">
@@ -315,7 +317,7 @@
 <!ENTITY Ctr_bookbarfs		"フルスクリーンモード中も表示する">
 <!ENTITY Ctr_nonavbarbg		"背景色を取り除く">
 <!ENTITY Ctr_nonavbarbg1	"このアドオンによる追加のツールバーや他のトップツールバーが影響を受けます。">
-<!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべてのSlim Chromeツールバーが影響を受けます。">
+<!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべての Slim Chrome ツールバーが影響を受けます。">
 <!ENTITY Ctr_nonavborder	"上に枠線を加える">
 <!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
@@ -332,19 +334,19 @@
 <!ENTITY Ctr_tabthrobber	"デフォルトのロードイメージ">
 <!ENTITY Ctr_bmanimation	"ブックマークする時にアニメーションする">
 <!ENTITY Ctr_pananimation	"パネルを開く時にアニメーションする">
-<!ENTITY Ctr_tabanimation	"タブを閉じる/開く時にアニメーションする (about:config設定)">
-<!ENTITY Ctr_dlanimation	"ダウンロード通知をアニメーションする (about:config設定)">
-<!ENTITY Ctr_fsanimation	"フルスクリーンアニメーション (about:config設定)">
-<!ENTITY Ctr_fsaduration	"HTML5コンテンツのフルスクリーンアニメーション (about:config設定)">
+<!ENTITY Ctr_tabanimation	"タブを閉じる/開く時にアニメーションする (about:config 設定)">
+<!ENTITY Ctr_dlanimation	"ダウンロード通知をアニメーションする (about:config 設定)">
+<!ENTITY Ctr_fsanimation	"フルスクリーンアニメーション (about:config 設定)">
+<!ENTITY Ctr_fsaduration	"HTML5コンテンツのフルスクリーンアニメーション (about:config 設定)">
 
 <!ENTITY Ctr_toolsitem		"ツールメニューに表示する">
-<!ENTITY Ctr_appmenuitem	"&brandShortName;メニューに表示する">
+<!ENTITY Ctr_appmenuitem	"&brandShortName; メニューに表示する">
 <!ENTITY Ctr_contextitem	"ツールバーの右クリックメニューに表示する">
 <!ENTITY Ctr_puictrbutton	"メニューボタンパネルに表示する">
 
 <!ENTITY Ctr_otherctroptns	"その他の設定">
 <!ENTITY Ctr_cuibotbuttons	"カスタマイズモードに追加のボタンを表示する">
-<!ENTITY Ctr_nodevtheme		"開発ツールを有効にされるのを防ぐ">
+<!ENTITY Ctr_nodevtheme		"Developer Edition のテーマが有効になるを防止する">
 
 <!ENTITY Ctr_experttweaks	"拡張設定">
 <!ENTITY Ctr_fx34search		"この設定をオフにすると、新しい外観の検索を無効にし古い外観の検索になります。">
@@ -353,11 +355,11 @@
 <!ENTITY Ctr_fx36prefs		"この設定をオフにすると、古い初期設定画面を復元します。">
 <!ENTITY Ctr_fx36prefs2		"注: 古い初期設定画面には最近追加されたブラウザの設定は含まれません！">
 <!ENTITY Ctr_fx38reader		"この設定をオフにすると、リーダーモードを無効にし、ロケーションバーからアイコンを除去します。">
-<!ENTITY Ctr_fx38pocket		"この設定をオフにすると、Pocket機能を無効にし、ツールバーからPocketボタンを削除します。">
-<!ENTITY Ctr_fx38pocket2	"注：ブックマークメニューとリーダーメニューのポップアップからすべてのPocket関連のエントリを削除する前に、カスタマイズモードで「その他のツールと機能」領域にPocketボタンを移動してください。">
+<!ENTITY Ctr_fx38pocket		"この設定をオフにすると、Pocket 機能を無効にし、ツールバーから Pocket ボタンを削除します。">
+<!ENTITY Ctr_fx38pocket2	"注：ブックマークメニューとリーダーメニューのポップアップからすべての Pocket 関連のエントリを削除する前に、カスタマイズモードで「その他のツールと機能」領域に Pocket ボタンを移動してください。">
 <!ENTITY Ctr_e_searchui		"検索の外観">
 <!ENTITY Ctr_e_loop			"&brandShortName; Hello">
-<!ENTITY Ctr_e_deved		"開発ツール">
+<!ENTITY Ctr_e_deved		"Developer Edition のテーマ">
 <!ENTITY Ctr_e_prefsui		"初期設定をタブで開く">
 <!ENTITY Ctr_e_readermode	"リーダーモード">
 <!ENTITY Ctr_e_pocket		"Pocket">
@@ -376,7 +378,7 @@
 
 <!ENTITY Ctr_special_font	"背景色の設定はデフォルトテーマのみに適用されます。">
 <!ENTITY Ctr_special_info	"一部オプションは特定の条件でのみ動作します。">
-<!ENTITY Ctr_special_info2	"設定は&brandShortName; デフォルトテーマ用に作成されたもので、サードパーティのテーマで動作しない可能性があります。">
+<!ENTITY Ctr_special_info2	"設定は &brandShortName; デフォルトテーマ用に作成されたもので、サードパーティのテーマで動作しない可能性があります。">
 <!ENTITY Ctr_support		"サポートフォーラム (英語)">
 <!ENTITY Ctr_newversion		"新バージョンをチェック">
 
@@ -384,7 +386,7 @@
 <!ENTITY appMenuGettingStarted.label	"入門">
 <!ENTITY goCmd.label					"移動">
 <!ENTITY Ctr_menu_restart.label			"リスタート">
-<!ENTITY Ctr_restartapp					"&brandShortName;メニューとファイルメニューにリスタートを追加する">
+<!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
 
 <!ENTITY Ctr_openInCurrentTab			"入力後に現在のタブで開く">
 <!ENTITY Ctr_openInNewTab				"入力後に新しいタブで開く">
