--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Iskanje">
 <!ENTITY Ctr_ctroldsearch	"Staro iskanje">
 <!ENTITY Ctr_ctroldsearchc	"Počisti iskalno polje po iskanju">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku (možnost about:config)">
 <!ENTITY Ctr_osearch_meoit	"Srednji kliki: išči v novem 'zavihku v ospredju'">
 <!ENTITY Ctr_osearch_iwidth	"Samodejno prilagodi širino pojavnega okna">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Odstrani barvo ozadja/meglo (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Modre barve Aero za orodne vrstice (in zavihke)">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Orodna vrstica z nazivom/menijem/zavihki: odstrani barvo ozadja">
 <!ENTITY Ctr_transpttbew10	"Dodatne prilagoditve za nekatere teme OS-a">
 <!ENTITY Ctr_transptcw10	"Skrij privzete gumbe OS-a skrči/razpni/zapri">
