--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -165,6 +165,7 @@
 <!ENTITY Ctr_search_ui		"Пошук">
 <!ENTITY Ctr_ctroldsearch	"Старий пошук">
 <!ENTITY Ctr_ctroldsearchc	"Очистити пошукове поле після пошуку">
+<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
 <!ENTITY Ctr_search_oit		"Відкрити пошук у новій вкладці (about:config preference)">
 <!ENTITY Ctr_osearch_meoit	"Середні-кліки: пошук в новій «передньоплановій вкладці»">
 <!ENTITY Ctr_osearch_iwidth	"Автоматично налаштовувати ширину спливаючого вікна">
@@ -304,6 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Прибрати затуманення/колір тла (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
+<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
 <!ENTITY Ctr_transpttbw10	"Панель заголовку/меню/вкладок: прибрати колір тла">
 <!ENTITY Ctr_transpttbew10	"Додаткові налаштування для деяких тем ОС">
 <!ENTITY Ctr_transptcw10	"Приховати типові OС кнопки мін/макс/закрити">
