--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -126,10 +126,10 @@
 <!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
+<!ENTITY Ctr_puibuttonsep	"Menüünupu eraldaja">
+<!ENTITY Ctr_puibut_no_sep	"Peidetud">
+<!ENTITY Ctr_puibut_l_sep	"Vasakul">
+<!ENTITY Ctr_puibut_r_sep	"Paremal">
 <!ENTITY Ctr_html5warning	"HTML5 täisekraani hoiatus">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
@@ -165,11 +165,11 @@
 <!ENTITY Ctr_search_ui		"Otsing">
 <!ENTITY Ctr_ctroldsearch	"Vana otsing">
 <!ENTITY Ctr_ctroldsearchc	"Pärast otsingu teostamist tühjenda otsingukast">
-<!ENTITY Ctr_ctroldsearchr	"Revert to default search engine after search">
+<!ENTITY Ctr_ctroldsearchr	"Pärast otsingu teostamist taasta vaikimisi otsingumootor">
 <!ENTITY Ctr_search_oit		"Ava otsingutulemuste leht uuel kaardil (about:config eelistus)">
 <!ENTITY Ctr_osearch_meoit	"Hiire keskmise nupuga klõpsamine: otsi uuel esiplaanil oleval kaardil">
 <!ENTITY Ctr_osearch_iwidth	"Automaatselt kohanda hüpiku laiust">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_cwidth	"Otsingu hüpikute kohandatud laius">
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
@@ -305,7 +305,7 @@
 <!ENTITY Ctr_menubarnofog	"Eemalda taustavärv/-udu (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Sinised Aero värvid tööriistaribadel (ja kaartidel)">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Hallikas-sinised Aero värvid">
 <!ENTITY Ctr_transpttbw10	"Tiitli-/menüü-/kaartide riba: eemalda taustavärv">
 <!ENTITY Ctr_transpttbew10	"Lisapisiparandused mõne OS teema jaoks">
 <!ENTITY Ctr_transptcw10	"Peida vaikimisi op-süsteemi min/max/sulge nupud">
